# Archivox

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  jobs.py  main.py  models.py  runner.py  transcribe.py
app/static/: styles.css
app/templates/: index.html
docs/: architecture.md  product.md  social-preview.html  transcription-strategy.md
ops/macos/: com.archivox.web.plist
scripts/: install.sh  install_launch_agent.sh  install_launcher_app.sh  run_archivox.sh  start_background.sh  status_background.sh  stop_background.sh  uninstall_launch_agent.sh
