[project]
name = "archivox"
version = "0.1.0"
description = "Local-first media transcription and knowledge extraction for long-form archives."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "faster-whisper>=1.2.1",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
archivox = "app.main:main"
archivox-transcribe = "app.cli:transcribe_file_main"
archivox-run-job = "app.cli:run_job_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
